--- a/PLUMWEB/Views/Home/Index.cshtml
+++ b/PLUMWEB/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-right">
+    <h1 class="display-4">P.L.U.M</h1>
+    <p>Learn about <a href="</a>.</p>
 </div>
