--- a/PLUMWEB/Views/Home/Index.cshtml
+++ b/PLUMWEB/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
 ﻿@{
     ViewData["Title"] = "";
 }
-
-<div class="text-right">
-    <h1 class="display-4">P.L.U.M</h1>
-    <p>Learn about <a href="</a>.</p>
+<div>
+<img src="~/images2.jpg." >
 </div>
+
