--- a/PLUMWEB/Views/Shared/_Layout.cshtml
+++ b/PLUMWEB/Views/Shared/_Layout.cshtml
@@ -10,8 +10,12 @@
      <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PLUMWEB.styles.css" asp-append-version="true" />
-</head>
-<body>
+     <link rel="stylesheet" href="~/css/style2.css" asp-append-version="true" />
+    </head>
+
+ <body>
+     
+<body\>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-success border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -32,7 +36,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="">ContactUs</a>
                         </li>
                          <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="">AboutUs</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="AboutUs.cshtml" asp-action="">AboutUs</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
