--- a/PLUMWEB/wwwroot/css/site.css
+++ b/PLUMWEB/wwwroot/css/site.css
@@ -14,5 +14,6 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-image: url('file:///C:\Users\Ramoy\Desktop\Enterprise Assignment\PLUMWEB\PLUMWEB\images\images1.jpg');
 }
