email confrimation works!!!

--- a/PLUMWEB/Views/Shared/_Layout.cshtml
+++ b/PLUMWEB/Views/Shared/_Layout.cshtml
@@ -10,7 +10,6 @@
      <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/PLUMWEB.styles.css" asp-append-version="true" />
-     <link rel="stylesheet" href="~/css/style2.css" asp-append-version="true" />
     </head>
 
  <body>
@@ -52,7 +51,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; @DateTime.Now.Year - PLUM Inc. - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - PLUM Inc.
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
