--- a/PLUMWEB/Views/Produces/Details.cshtml
+++ b/PLUMWEB/Views/Produces/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using PLUMWEB.Data.Models
 @model ProduceVM
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "View Produce";
 }
 
 <h1>PRODUCE DETAILS</h1>
