--- a/PLUMWEB/wwwroot/css/site.css
+++ b/PLUMWEB/wwwroot/css/site.css
@@ -1,19 +1,27 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    height: 100%;
 }
 
 @media (min-width: 768px) {
   html {
-    font-size: 16px;
+    font-size: 14px;
+   
+
   }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+ 
+  height: 100%;
 }
 
 body {
-    margin-bottom: 60px;
+    height: 100%;
+    margin-bottom: 30px;
+    font-family: 'Poppins', sans-serif;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     background-image: url('file:///C:\Users\Ramoy\Desktop\Enterprise Assignment\PLUMWEB\PLUMWEB\images\images1.jpg');
 }
